maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: not found: value nums
  if (aMurNord(x,y)==false){recurs(x,y+1,nums+1)}
                                         ^JediEscaper:38: error: not found: value nums
  if (aMurSud(x,y)==false){recurs(x,y-1,nums+1)}
                                        ^JediEscaper:39: error: not found: value nums
  if (aMurEst(x,y)==false){recurs(x+1,y,nums+1)}
                                        ^JediEscaper:40: error: not found: value nums
  if (aMurOuest(x,y)==false){recurs(x-1,y,nums+1)}
                                          ^